--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Main HTML header and body */
 * {
     box-sizing: border-box;
   }
@@ -16,6 +17,7 @@ main {
     justify-content: space-around;
   }
   body{
+    height: 100vh;
     background-image: url("./Denver-skyline.jpeg");
     background-color: blue;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -28,13 +30,14 @@ main {
     align-items: center;
     
 }
-.buttons{
+/* Button layout */
+.ogbuttons{
     flex-direction: row;
     display:inline;
     justify-content: center;
 }
 
-.button{
+.ogbutton{
     background-color: transparent;
     opacity: 93%;
     width: 400px;
@@ -46,3 +49,74 @@ main {
     font-size: 25px;
     font-weight: bolder;
 }
+/* CSS for map */
+
+#map {
+    justify-content: center;
+    height: 350px;
+    width: 400px;
+}
+
+.map-container{
+    width: 800px;
+    height: 800px;
+}
+/* Overide map container */
+.leaflet-container {
+ display: flex;
+ flex-direction: column;
+ justify-content: right;
+ margin-top: 100px;
+ margin-left: 100px;
+}
+
+/* Restaurant Dropdown  */
+  
+.button:hover, .button:focus {
+    background-color: #3e8e41;
+  }
+  
+  #myInput {
+    box-sizing: border-box;
+    background-image: url('searchicon.png');
+    background-position: 14px 12px;
+    background-repeat: no-repeat;
+    font-size: 16px;
+    padding: 14px 20px 12px 45px;
+    position: relative;
+    float: right;
+    border: none;
+    border-bottom: 1px solid #ddd;
+  }
+ 
+  #myInput:focus {outline: 3px solid #ddd;}
+
+  .box {
+    
+  }
+
+  .droprest {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f6f6f6;
+    min-width: 230px;
+    border: 1px solid #ddd;
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .show {display:block;}
